# world_imagine

./: .clang-format  .gitignore  CMakeLists.txt  NOTES_TODO.md  PLAN.md  README.md
cmake/: CompilerFlags.cmake
shaders/: point.vert.glsl  sort_bitonic.comp.glsl  sort_depth.comp.glsl  splat.frag.glsl  splat.vert.glsl
src/: main.cpp
src/app/: AppState.hpp  Application.cpp  Application.hpp
src/io/: PlyParser.cpp  PlyParser.hpp  SplatIO.cpp  SplatIO.hpp
src/model/: GaussianModel.cpp  GaussianModel.hpp
src/pipeline/: ColmapRunner.cpp  ColmapRunner.hpp  FrameExtractor.cpp  FrameExtractor.hpp  SplatTrainer.cpp  SplatTrainer.hpp  VideoImporter.cpp  VideoImporter.hpp
src/render/: Camera.cpp  Camera.hpp  FlyCamera.cpp  FlyCamera.hpp  GpuBuffer.cpp  GpuBuffer.hpp  OrbitCamera.cpp  OrbitCamera.hpp  SplatRenderer.cpp  SplatRenderer.hpp  VmaImpl.cpp  VulkanContext.cpp  VulkanContext.hpp  VulkanPipeline.cpp  VulkanPipeline.hpp
src/ui/: ControlsOverlay.cpp  ControlsOverlay.hpp  FpsOverlay.cpp  FpsOverlay.hpp  MainWindow.cpp  MainWindow.hpp  MenuOverlay.cpp  MenuOverlay.hpp  ProgressModal.cpp  ProgressModal.hpp  ProgressOverlay.cpp  ProgressOverlay.hpp  Viewport3D.cpp  Viewport3D.hpp
src/util/: AsyncJob.hpp
test_data/: test_splat.ply
